# mehertz.github.io

./: .gitignore  README.md  REPRODUCIBILITY.md  config.json  debug.py  index.html  llm.txt  pyproject.toml  requirements.txt  run-ssg.py  setup.py
.uv/: settings.toml
content/: test.md  vc.md
html/: index.html  test.html  vc.html
html/static/css/: style.css
scripts/: setup_env.sh
ssg/: __init__.py  cli.py  main.py
ssg/static/css/: style.css
ssg/templates/: index.html  post.html
